--- a/gui/Cloud7/src/cloud7/main/View.form
+++ b/gui/Cloud7/src/cloud7/main/View.form
@@ -134,8 +134,10 @@
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[55, 55]"/>
                 </Property>
-                <Property name="verticalAlignment" type="int" value="3"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton4">
               <Properties>
